ledger-core/scripts/deploy/kube/prometheus/00-SA.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: prometheus
  name: prometheus
