ledger-core/scripts/deploy/kube/prometheus/04-prometheus-node-exporter.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: prometheus
spec:
  clusterIP: None
  selector:
    app: node-exporter
  ports:
    - protocol: TCP
      port: 9100
      targetPort: 9100
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: node-exporter
  namespace: prometheus
  labels:
    app: node-exporter
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    version: v0.18.0
spec:
  selector:
    matchLabels:
      app: node-exporter
      version: v0.18.0
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/port: "9100"
        prometheus.io/scrape: "true"
      labels:
        app: node-exporter
        version: v0.18.0
    spec:
      containers:
        - name: prometheus-node-exporter
          image: "prom/node-exporter:v0.18.0"
          securityContext:
            privileged: true
          imagePullPolicy: "IfNotPresent"
          args:
            - --path.procfs=/host/proc
            - --path.sysfs=/host/sys
          ports:
            - name: metrics
              containerPort: 9100
              hostPort: 9100
          volumeMounts:
            - name: proc
              mountPath: /host/proc
              readOnly: true
            - name: sys
              mountPath: /host/sys
              readOnly: true
          resources:
            limits:
              cpu: 30m
              memory: 50Mi
            requests:
              cpu: 30m
              memory: 50Mi
          readinessProbe:
            tcpSocket:
              port: metrics
            initialDelaySeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: metrics
            initialDelaySeconds: 10
            timeoutSeconds: 5
      hostNetwork: true
      hostPID: true
      volumes:
        - name: proc
          hostPath:
            path: /proc
        - name: sys
          hostPath:
            path: /sys
